--- a/src/app/login/login-account/login-account.component.html
+++ b/src/app/login/login-account/login-account.component.html
@@ -6,7 +6,8 @@
 
 <ion-content id = "wrapper">
   <div>
-    <h1><b>Creaţi un cont</b></h1>
+    <h1><b>Autentificare</b></h1>
+    <p id = "info">la contul Saloo cu e-mailul dumneavoastră</p>
     <form>
       <ion-item>
         <ion-label position="floating">Adresă de e-mail</ion-label>
@@ -20,8 +21,9 @@
         <ion-icon [name]="eyeType" slot = "end" (click) = "changeEye()"></ion-icon>
       </ion-item>
 
-      <ion-button expand="block">Creaţi cont</ion-button>
+      <ion-button expand="block">Autentificare</ion-button>
 
     </form>
+    <p id = "passwordForgot"><a>Aţi uitat parola?</a></p>
   </div>
 </ion-content>
