--- a/src/app/login/login-main-page/login-main-page.component.html
+++ b/src/app/login/login-main-page/login-main-page.component.html
@@ -25,7 +25,7 @@
           </ion-button>  
       </ion-item>
       <ion-item>
-          <ion-button expand = "full" shape="round">
+          <ion-button expand = "full" shape="round" (click) = "loginAccount()">
               <ion-icon name="mail" slot = "start"></ion-icon>              
               <ion-label>Autentificati-va cu adresa de e-mail</ion-label>
           </ion-button> 
