--- a/src/app/login/login-account/login-account.component.scss
+++ b/src/app/login/login-account/login-account.component.scss
@@ -26,6 +26,29 @@ ion-content{
 
         h1{
             margin-left:5%;
+            margin-bottom:0;
+            padding-bottom: 10px;
+        }
+
+        #info{
+            margin-top:0;
+            padding-top:10px;
+            margin-left:5%;
+        }
+
+        #passwordForgot{
+            text-align: center;
+            width:100%;
+            justify-content: center;
+            align-content: center;
+            vertical-align: middle;
+
+            a{
+                margin:auto;
+                text-align:center;
+                width: 100%;
+                cursor: pointer;
+            }
         }
 
         ion-label{
