--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,43 +4,46 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Saloo
     </ion-title>
+    <ion-button shape = "round" fill = "none" slot = "end"><ion-icon name="notifications-outline"></ion-icon></ion-button>
+    <ion-button shape = "round" fill = "none" slot = "end"><ion-icon name="more"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
 
+  <div id = "firstPartWrapper">
+
+    <div id = "contentWrapper">
+
+      <p>   
+          <b>Descoperă şi programează-te la saloanele noastre favorite</b>
+      </p>
+
+      <p>Ce</p>
+
+      <ion-item lines = "full" class = "questionMarker">
+          <ion-input type="text" name = "search"  placeholder = "Service, Stylist sau Salon"></ion-input>
+          <ion-icon name="search" slot = "start"></ion-icon>
+      </ion-item>
+
+      <p>Unde</p>
+
+      <ion-item lines = "full" class = "questionMarker">
+          <ion-input type="text" name = "search"  placeholder = "Oraş sau Judeţ"></ion-input>
+          <ion-icon name="search" slot = "start"></ion-icon>
+      </ion-item>
+
+      <p>Când</p>
+
+      <ion-item lines = "full" class = "questionMarker">
+          <ion-input type="text" name = "search"  placeholder = "Oricând"></ion-input>
+          <ion-icon name="search" slot = "start"></ion-icon>
+      </ion-item>
+
+    </div>
+
+  </div>
 
 </ion-content>
