aproape se leaga tot la client

--- a/src/app/home/make-appointment/make-appointment.component.html
+++ b/src/app/home/make-appointment/make-appointment.component.html
@@ -19,7 +19,7 @@
     </ion-item>
 
     <ion-list>
-        <ion-radio-group [(ngModel)] = "ceva" (ionChange) = "changeWorkerSelected($event.detail.value)">
+        <ion-radio-group [(ngModel)] = "selectedStylist" (ionChange) = "changeWorkerSelected($event.detail.value)">
           <ion-list-header>
             <ion-label>Stilisti</ion-label>
           </ion-list-header>
